# fontconfig-cache-parser

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  test.yaml
examples/: dump.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dont-panic.rs
src/: data.rs  lib.rs  main.rs  ptr.rs
