[package]
name = "fontconfig-cache-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytemuck = { version = "1.12.2", features = ["derive"] }
clap = { version = "4.0.19", features = ["derive"] }
thiserror = "1.0.37"
