[package]
name = "fontconfig-cache-parser"
version = "0.1.0"
edition = "2021"
authors = [ "Joe Neeman <joeneeman@gmail.com>" ]
repository = "https://github.com/jneem/fontconfig-cache-parser"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.66"
bytemuck = { version = "1.12.2", features = ["derive"] }
clap = { version = "4.0.19", features = ["derive"] }
thiserror = "1.0.37"
