[package]
name = "fontconfig-cache-parser"
description = "A parser for fontconfig's cache format"
version = "0.1.1"
edition = "2021"
authors = [ "Joe Neeman <joeneeman@gmail.com>" ]
repository = "https://github.com/jneem/fontconfig-cache-parser"
license = "MIT OR Apache-2.0"

[dependencies]
bytemuck = { version = "1.12.2", features = ["derive"] }
thiserror = "1.0.37"

[dev-dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["derive"] }
